refactor: 批量优化代码注释与细节调整