@@ -42,7 +42,7 @@ class ProductCatalogContractTest {
         assertThat(catalog.listings()).hasSize(1);
         assertThat(catalog.mediaAssets()).hasSize(2);
 
-        Spu spu = catalog.spus().get(0);
+        Spu spu = catalog.spus().getFirst();
         assertThat(spu.spuId()).isEqualTo("spu-1001");
         assertThat(spu.sourceRef().platform()).isEqualTo("1688");
         assertThat(spu.sourceRef().fetchedAt()).isEqualTo("2026-09-09T08:30:00Z");
@@ -51,18 +51,18 @@ class ProductCatalogContractTest {
         assertThat(spu.images()).hasSize(2);
         assertThat(spu.skus()).extracting("skuId").containsExactly("sku-3001", "sku-3002");
         assertThat(spu.sourceCategories()).hasSize(1);
-        assertThat(spu.sourceCategories().get(0).label()).isEqualTo("数码/影音/音箱");
+        assertThat(spu.sourceCategories().getFirst().label()).isEqualTo("数码/影音/音箱");
         // 属性值多态（string / number / boolean → JsonNode 保真）
         assertThat(spu.attributes()).hasSize(3);
-        assertThat(spu.attributes().get(0).value().asText()).isEqualTo("1200mAh");
+        assertThat(spu.attributes().getFirst().value().asText()).isEqualTo("1200mAh");
         assertThat(spu.attributes().get(1).value().isNumber()).isTrue();
         assertThat(spu.attributes().get(2).value().isBoolean()).isTrue();
         assertThat(spu.provenance().createdByStep()).isEqualTo(io.autocommerce.core.catalog.model.ProvenanceStep.CAPTURE);
         assertThat(spu.provenance().parentRef()).isEqualTo("offer-6688990011");
 
         // 货源侧标识符落 master（#39）：sourceSpecId = 1688 下单键，与 sourceSkuId（规格组合内部 id）并列
-        assertThat(catalog.skus().get(0).sourceSkuId()).isEqualTo("1688-sku-3001");
-        assertThat(catalog.skus().get(0).sourceSpecId()).isEqualTo("b266e0726506185beaf205cbae88530d");
+        assertThat(catalog.skus().getFirst().sourceSkuId()).isEqualTo("1688-sku-3001");
+        assertThat(catalog.skus().getFirst().sourceSpecId()).isEqualTo("b266e0726506185beaf205cbae88530d");
 
         // sku-3002 显式 null 语义（barcode/images/sourceSkuId/sourceSpecId 可空）
         Sku sku2 = catalog.skus().get(1);
@@ -73,7 +73,7 @@ class ProductCatalogContractTest {
         assertThat(sku2.sourceSpecId()).isNull();
         assertThat(sku2.costPrice().amount()).isEqualTo("45.90");
 
-        Listing listing = catalog.listings().get(0);
+        Listing listing = catalog.listings().getFirst();
         assertThat(listing.listingId()).isEqualTo("listing-4001");
         assertThat(listing.channelId()).isEqualTo("taobao-shop-a");
         assertThat(listing.titleOverrides()).containsOnlyKeys("zh-CN");
@@ -82,19 +82,19 @@ class ProductCatalogContractTest {
         assertThat(listing.platformAttributes()).hasSize(2);
         assertThat(listing.specMappings()).hasSize(1);
         assertThat(listing.skuSet()).hasSize(2);
-        assertThat(listing.skuSet().get(0).enabled()).isTrue();
+        assertThat(listing.skuSet().getFirst().enabled()).isTrue();
         assertThat(listing.skuSet().get(1).enabled()).isFalse();
         // catalog Money.amount 为 decimal string
-        assertThat(listing.skuSet().get(0).price().amount()).isEqualTo("79.00");
-        assertThat(listing.images().get(0).platformMediaId()).isEqualTo("tb-media-9001");
+        assertThat(listing.skuSet().getFirst().price().amount()).isEqualTo("79.00");
+        assertThat(listing.images().getFirst().platformMediaId()).isEqualTo("tb-media-9001");
         // degraded_steps（#20 内容链降级留痕，specs/0006 §5/§6）：Step id + 原因
         assertThat(listing.degradedSteps()).hasSize(1);
-        assertThat(listing.degradedSteps().get(0).step()).isEqualTo("title.rewrite");
-        assertThat(listing.degradedSteps().get(0).reason()).isNotBlank();
+        assertThat(listing.degradedSteps().getFirst().step()).isEqualTo("title.rewrite");
+        assertThat(listing.degradedSteps().getFirst().reason()).isNotBlank();
         assertThat(listing.provenance().createdByStep())
                 .isEqualTo(io.autocommerce.core.catalog.model.ProvenanceStep.LISTING);
 
-        MediaAsset main = catalog.mediaAssets().get(0);
+        MediaAsset main = catalog.mediaAssets().getFirst();
         assertThat(main.processingState()).isEqualTo(io.autocommerce.core.catalog.model.ProcessingState.UPLOADED);
         assertThat(main.role()).isEqualTo(io.autocommerce.core.catalog.model.MediaRole.MAIN);
         MediaAsset localized = catalog.mediaAssets().get(1);
